// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageHeader > renders title only 1`] = `
<div>
  <header
    class="flex items-start justify-between gap-6 pb-6 pt-8 shadow-hairline-b"
  >
    <div
      class="min-w-0"
    >
      <h1
        class="font-display text-[2rem] leading-[1.05] tracking-tightest text-ink"
      >
        Funis
      </h1>
    </div>
  </header>
</div>
`;

exports[`PageHeader > renders with eyebrow + description + actions 1`] = `
<div>
  <header
    class="flex items-start justify-between gap-6 pb-6 pt-8 shadow-hairline-b"
  >
    <div
      class="min-w-0"
    >
      <div
        class="mb-2 text-2xs font-medium uppercase tracking-[0.14em] text-ink-dim"
      >
        Visão geral
      </div>
      <h1
        class="font-display text-[2rem] leading-[1.05] tracking-tightest text-ink"
      >
        Operação
      </h1>
      <p
        class="mt-2 max-w-2xl text-[0.9375rem] leading-relaxed text-ink-muted"
      >
        Resumo em tempo real
      </p>
    </div>
    <div
      class="flex shrink-0 items-center gap-2"
    >
      <button
        type="button"
      >
        Atualizar
      </button>
    </div>
  </header>
</div>
`;
